--- a/css/friends.css
+++ b/css/friends.css
@@ -1,6 +1,3 @@
-.friends .friends__header {
-}
-
 .friends .friends__plus {
   padding: 20px 0px;
   border-top: 1px solid #f7f7f7;
@@ -13,4 +10,8 @@
   font-size: 14px;
   opacity: 0.6;
   margin-bottom: 12px;
+}
+
+.friends__friend {
+  margin: 10px 0px;
 }
